<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="88dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp">

                <RelativeLayout
                    android:id="@+id/zebraHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="2dp"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/zebraLogo"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="false"
                        android:layout_alignParentBottom="false"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/zebra_logo"
                        android:src="@drawable/zebralogo" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@+id/zebraLogo"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zebra_technologies_corp"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zebra_address_line_1"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/launchpad_link"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zebra_address_line_2"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />
                    </LinearLayout>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00769F"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/ipDnsRadio"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/ip_dns"
                            android:textColor="@android:color/white" />

                        <RadioButton
                            android:id="@+id/bluetoothRadio"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/bluetooth_r"
                            android:textColor="@android:color/white" />
                    </RadioGroup>

                    <!-- Ip Address  -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ipAddressInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/ip_address"
                        app:startIconDrawable="@drawable/badge_24px">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textNoSuggestions|text" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <!-- Port  -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/portInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/port"
                        app:counterEnabled="true"
                        app:counterMaxLength="5"
                        app:errorEnabled="true"
                        app:startIconDrawable="@drawable/badge_24px">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- MAC Address  -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/macInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="10dp"
                        android:enabled="false"
                        android:hint="MAC Address"
                        app:startIconDrawable="@drawable/badge_24px">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textNoSuggestions|text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/statusText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Not Connected" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/button_print"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/print" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/selectedPrinterFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/selectedPrinterFragmentContainer"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true">

            <ImageView
                android:id="@+id/zebraFooterLogo"
                android:layout_width="139dp"
                android:layout_height="48dp"
                android:layout_gravity="bottom"
                android:layout_margin="8dp"
                android:contentDescription="@string/zebra_logo"
                android:src="@drawable/zebra_logo_black" />
        </FrameLayout>
    </RelativeLayout>
</ScrollView>
